# weather-rs

./: .env.example  Cargo.toml  LICENSE  README.md
locales/: de.ftl  en.ftl  uk.ftl
src/: callbacks.rs  commands.rs  main.rs  schema.rs  states.rs  types.rs
src/api/: api.rs  mod.rs  models.rs  service.rs
src/db/: db.rs  mod.rs  models.rs  pool.rs  queries.rs  schema.rs
src/enums/: callbacks.rs  languages.rs  mod.rs
src/enums/units/: mod.rs  speed.rs  temperature.rs
src/handlers/: mod.rs  receive_city.rs  start.rs  today.rs  weather.rs
src/handlers/settings/: hub.rs  mod.rs
src/handlers/settings/language/: hub.rs  mod.rs  select.rs
src/handlers/settings/units/: hub.rs  mod.rs
src/handlers/settings/units/speed/: hub.rs  select.rs
src/handlers/settings/units/temperature/: hub.rs  mod.rs  select.rs
src/traits/: chat.rs
src/utils/: chat.rs  keyboard.rs  locales.rs  mod.rs  string.rs
