[package]
name = "weather-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version="0.17.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
dotenvy = { version = "0.15.7" , features = [] }
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.3.2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.7.2", features = ["postgres", "deadpool"] }
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
once_cell = "1.21.3"
